# rust-benchmarking-and-profiling

./: Cargo.toml  README.md  dhat-heap.json  hyperfine.sh  hyperfine_opt.sh  perf.data  stacks.folded
benches/: benchmark.rs
src/: lib.rs  main.rs
